# docneedle

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md
.github/workflows/: code-quality.yml
crates/app/: Cargo.toml  README.md
crates/app/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: chunking.rs  embeddings.rs  error.rs  extractor.rs  ingest.rs  lib.rs  models.rs  orchestrator.rs  store.rs  traits.rs
crates/core/src/stores/: mod.rs  neo4j.rs  opensearch.rs  qdrant.rs
deploy/: docker-compose.yml
docs/: ARCHITECTURE_DECISIONS.md  DEVELOPER_GUIDE.md  LEARNING_NOTES.md  PRODUCT_BRIEF.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: bootstrap-stack.sh
